--- a/homework/Solution_HW7_2021_JMD.ipynb
+++ b/homework/Solution_HW7_2021_JMD.ipynb
@@ -317,123 +317,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SPY</th>\n",
-       "      <th>GMWAX</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1996-11-30</th>\n",
-       "      <td>0.0687</td>\n",
-       "      <td>0.0409</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996-12-31</th>\n",
-       "      <td>-0.0282</td>\n",
-       "      <td>-0.0156</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-01-31</th>\n",
-       "      <td>0.0575</td>\n",
-       "      <td>0.0104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-02-28</th>\n",
-       "      <td>0.0052</td>\n",
-       "      <td>0.0179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997-03-31</th>\n",
-       "      <td>-0.0486</td>\n",
-       "      <td>-0.0196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-06-30</th>\n",
-       "      <td>-0.0839</td>\n",
-       "      <td>-0.0656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-07-31</th>\n",
-       "      <td>0.0901</td>\n",
-       "      <td>0.0324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-08-31</th>\n",
-       "      <td>-0.0433</td>\n",
-       "      <td>-0.0283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-09-30</th>\n",
-       "      <td>-0.0952</td>\n",
-       "      <td>-0.0714</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022-10-31</th>\n",
-       "      <td>0.0778</td>\n",
-       "      <td>0.0352</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>312 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               SPY   GMWAX\n",
-       "1996-11-30  0.0687  0.0409\n",
-       "1996-12-31 -0.0282 -0.0156\n",
-       "1997-01-31  0.0575  0.0104\n",
-       "1997-02-28  0.0052  0.0179\n",
-       "1997-03-31 -0.0486 -0.0196\n",
-       "...            ...     ...\n",
-       "2022-06-30 -0.0839 -0.0656\n",
-       "2022-07-31  0.0901  0.0324\n",
-       "2022-08-31 -0.0433 -0.0283\n",
-       "2022-09-30 -0.0952 -0.0714\n",
-       "2022-10-31  0.0778  0.0352\n",
-       "\n",
-       "[312 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "GMO_ex"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -616,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +562,7 @@
        "GMWAX     -0.1492  -0.0598       -0.4729"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +618,7 @@
        "SPY     -0.1656  -0.0802         -0.56"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +674,7 @@
        "GMWAX     -0.1187  -0.0397        -0.226"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +730,7 @@
        "SPY     -0.1247  -0.0687       -0.2481"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +786,7 @@
        "GMWAX     -0.1492  -0.0483       -0.4729"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +842,7 @@
        "SPY     -0.1656    -0.08         -0.56"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2351,6 +2234,147 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>3-factor Strat</th>\n",
+       "      <th>DP Strat</th>\n",
+       "      <th>EP Strat</th>\n",
+       "      <th>rf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1993-03-31</th>\n",
+       "      <td>0.0303</td>\n",
+       "      <td>0.0385</td>\n",
+       "      <td>0.0185</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-04-30</th>\n",
+       "      <td>-0.0333</td>\n",
+       "      <td>-0.0428</td>\n",
+       "      <td>-0.0209</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-05-31</th>\n",
+       "      <td>0.0364</td>\n",
+       "      <td>0.0464</td>\n",
+       "      <td>0.0223</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-06-30</th>\n",
+       "      <td>0.0048</td>\n",
+       "      <td>0.0063</td>\n",
+       "      <td>0.0030</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-07-31</th>\n",
+       "      <td>-0.0064</td>\n",
+       "      <td>-0.0082</td>\n",
+       "      <td>-0.0038</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-06-30</th>\n",
+       "      <td>-0.0621</td>\n",
+       "      <td>-0.0445</td>\n",
+       "      <td>-0.0773</td>\n",
+       "      <td>0.0014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-31</th>\n",
+       "      <td>0.0841</td>\n",
+       "      <td>0.0558</td>\n",
+       "      <td>0.0993</td>\n",
+       "      <td>0.0020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31</th>\n",
+       "      <td>-0.0354</td>\n",
+       "      <td>-0.0251</td>\n",
+       "      <td>-0.0398</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-30</th>\n",
+       "      <td>-0.0714</td>\n",
+       "      <td>-0.0490</td>\n",
+       "      <td>-0.0928</td>\n",
+       "      <td>0.0028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-31</th>\n",
+       "      <td>0.0777</td>\n",
+       "      <td>0.0539</td>\n",
+       "      <td>0.0951</td>\n",
+       "      <td>0.0035</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>356 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            3-factor Strat  DP Strat  EP Strat      rf\n",
+       "1993-03-31          0.0303    0.0385    0.0185  0.0025\n",
+       "1993-04-30         -0.0333   -0.0428   -0.0209  0.0025\n",
+       "1993-05-31          0.0364    0.0464    0.0223  0.0026\n",
+       "1993-06-30          0.0048    0.0063    0.0030  0.0026\n",
+       "1993-07-31         -0.0064   -0.0082   -0.0038  0.0026\n",
+       "...                    ...       ...       ...     ...\n",
+       "2022-06-30         -0.0621   -0.0445   -0.0773  0.0014\n",
+       "2022-07-31          0.0841    0.0558    0.0993  0.0020\n",
+       "2022-08-31         -0.0354   -0.0251   -0.0398  0.0025\n",
+       "2022-09-30         -0.0714   -0.0490   -0.0928  0.0028\n",
+       "2022-10-31          0.0777    0.0539    0.0951  0.0035\n",
+       "\n",
+       "[356 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2375,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,23 +2419,36 @@
     "            actual = y.iloc[[i]]\n",
     "            forecast_err.append(reg_predict - actual)\n",
     "            null_err.append(null_forecast - actual)\n",
-    "            \n",
     "    RSS = (np.array(forecast_err)**2).sum()\n",
     "    TSS = (np.array(null_err)**2).sum()\n",
-    "    \n",
+    "    print(RSS)\n",
+    "    print(TSS)\n",
     "    return 1 - RSS/TSS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_excel('../data/gmo_analysis_data.xlsx',\n",
+    "                   sheet_name=1, index_col=0).dropna()\n",
+    "df = df.join(GMO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EP OOS R-squared: -0.0183\n"
+      "0.6297038901908675\n",
+      "0.6100545188176036\n",
+      "EP OOS R-squared: -0.0322\n"
      ]
     }
    ],
@@ -2439,7 +2476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2463,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -2493,23 +2530,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1998-02-28</th>\n",
-       "      <td>0.1154</td>\n",
+       "      <td>0.1506</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998-03-31</th>\n",
-       "      <td>0.1004</td>\n",
+       "      <td>0.1300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998-04-30</th>\n",
-       "      <td>0.0296</td>\n",
+       "      <td>0.0370</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998-05-31</th>\n",
-       "      <td>-0.0446</td>\n",
+       "      <td>-0.0560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998-06-30</th>\n",
-       "      <td>0.0717</td>\n",
+       "      <td>0.0947</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2517,14 +2554,14 @@
       ],
       "text/plain": [
        "            Strat Returns\n",
-       "1998-02-28         0.1154\n",
-       "1998-03-31         0.1004\n",
-       "1998-04-30         0.0296\n",
-       "1998-05-31        -0.0446\n",
-       "1998-06-30         0.0717"
+       "1998-02-28         0.1506\n",
+       "1998-03-31         0.1300\n",
+       "1998-04-30         0.0370\n",
+       "1998-05-31        -0.0560\n",
+       "1998-06-30         0.0947"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2537,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -2572,12 +2609,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Summary Stats</th>\n",
-       "      <td>0.0974</td>\n",
-       "      <td>0.2299</td>\n",
-       "      <td>0.4237</td>\n",
-       "      <td>0.0574</td>\n",
-       "      <td>0.4667</td>\n",
-       "      <td>-0.7609</td>\n",
+       "      <td>0.0971</td>\n",
+       "      <td>0.2608</td>\n",
+       "      <td>0.3723</td>\n",
+       "      <td>0.0548</td>\n",
+       "      <td>0.4935</td>\n",
+       "      <td>-0.8028</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2585,13 +2622,13 @@
       ],
       "text/plain": [
        "                 Mean     Vol  Sharpe (Mean/Vol)  $\\alpha$  $\\beta^{SPY}$  \\\n",
-       "Summary Stats  0.0974  0.2299             0.4237    0.0574         0.4667   \n",
+       "Summary Stats  0.0971  0.2608             0.3723    0.0548         0.4935   \n",
        "\n",
        "               Max Drawdown  \n",
-       "Summary Stats       -0.7609  "
+       "Summary Stats       -0.8028  "
       ]
      },
-     "execution_count": 97,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2616,7 +2653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -2646,7 +2683,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>EP Strat</th>\n",
-       "      <td>-0.0742</td>\n",
+       "      <td>-0.0830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SPY</th>\n",
@@ -2662,12 +2699,12 @@
       ],
       "text/plain": [
        "          5% VaR\n",
-       "EP Strat -0.0742\n",
+       "EP Strat -0.0830\n",
        "SPY      -0.0739\n",
        "GMO      -0.0473"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2691,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -2726,12 +2763,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Summary Stats</th>\n",
-       "      <td>0.0433</td>\n",
-       "      <td>0.2909</td>\n",
-       "      <td>0.1488</td>\n",
-       "      <td>0.0419</td>\n",
-       "      <td>0.0775</td>\n",
-       "      <td>-0.7609</td>\n",
+       "      <td>0.0427</td>\n",
+       "      <td>0.3258</td>\n",
+       "      <td>0.1311</td>\n",
+       "      <td>0.0435</td>\n",
+       "      <td>-0.0462</td>\n",
+       "      <td>-0.8028</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2739,13 +2776,13 @@
       ],
       "text/plain": [
        "                 Mean     Vol  Sharpe (Mean/Vol)  $\\alpha$  $\\beta^{SPY}$  \\\n",
-       "Summary Stats  0.0433  0.2909             0.1488    0.0419         0.0775   \n",
+       "Summary Stats  0.0427  0.3258             0.1311    0.0435        -0.0462   \n",
        "\n",
        "               Max Drawdown  \n",
-       "Summary Stats       -0.7609  "
+       "Summary Stats       -0.8028  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2756,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -2801,7 +2838,7 @@
        "US3M  0.0231  0.0058  3.9866"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2826,7 +2863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -2857,7 +2894,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>% of periods underperforming $r^{f}$</th>\n",
-       "      <td>38.7205</td>\n",
+       "      <td>37.7104</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2866,10 +2903,10 @@
       ],
       "text/plain": [
        "                                      EP Strat   rf\n",
-       "% of periods underperforming $r^{f}$   38.7205  0.0"
+       "% of periods underperforming $r^{f}$   37.7104  0.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
