--- a/homework/hw7.ipynb
+++ b/homework/hw7.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,14 +123,17 @@
     "    ss_df['Sharpe (Mean/Vol)'] = ss_df['Mean'] / ss_df['Vol']\n",
     "\n",
     "    X = sm.add_constant(bm.loc[series.index])\n",
-    "    alphas, betas = [], []\n",
+    "    alphas, betas, info_ratios = [], [], []\n",
     "    for col in series.columns:\n",
     "        y = series[[col]]\n",
-    "        reg = sm.OLS(y, X).fit().params\n",
+    "        model = sm.OLS(y, X).fit()\n",
+    "        reg = model.params\n",
     "        alphas.append(reg[0] * annual_fac)\n",
     "        betas.append(reg[1])\n",
+    "        info_ratios.append((reg[0] / model.resid.std()) * np.sqrt(annual_fac))\n",
     "    ss_df[\"alpha\"] = alphas\n",
     "    ss_df[\"beta\"] = betas\n",
+    "    ss_df[\"Info ratio\"] = info_ratios\n",
     "\n",
     "    cum_ret = (1 + series).cumprod()\n",
     "    rolling_max = cum_ret.cummax()\n",
@@ -144,13 +147,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## SECTION 1 (optional): GMO — Grantham, Mayo & Van Otterloo\n",
+    "### QUESTION 1 : GMO's Approach\n",
+    "(a) GMO believes that they can more easily predict long-run than short-run asset-class performance, because the market in the long-run is like a weighing machine (convergence toward fundamental value for value-driven investors), whereas the market in the short-run is like a voting machine (noisy).\n",
+    "\n",
+    "(b) GMO's full model uses the following predicting variables : D/P ratio (\"dividend yield\"), P/E growth, E/S growth (\"profit margins\"), and sales growth (per share). Yes, this fits with the goal of long-run forecasts, since it is consisent with the Gordon growth model.\n",
+    "\n",
+    "(c) This is a \"Zen\" approach (towards a steady state) against ephemeral overreaction, which ends up being contrary to human-sentiment decision-making.\n",
+    "\n",
+    "(d) This approach raises business risk and managerial-career risk, because investors and managers may tend to overreact so sell their shares of GMWAX if contrary to perceived personal gain.\n",
+    "\n",
+    "### QUESTION 2 : The Market Environment\n",
+    "(a) The so-called Lost Decade (2000–2011) where stocks underperformed riskfree bonds is a reason to be skeptical that the market risk premium will be as high as the past 50 years.\n",
+    "\n",
+    "(b) The biggest drivers of GMO's 2007 forecast of real excess equity returns being negative are that the signals of the P/E & E/S ratios were negative for the next 7 years, whereas for the steady state they are taken as zero.\n",
+    "\n",
+    "(c) In GMO's 2011 forecast, the signal that GMO has most revised relative to 2007 is the P/E ratio for the next 7 years. Now, the equity premium is forecast to be positive on both time horizons (0 < 7-year @ 1.6% < steady-state @ 4.2%).\n",
+    "\n",
+    "### QUESTION 3 : Exhibit 1 (2002–2011)\n",
+    "(a) US equities were estimated to have a negative 10-yr return.\n",
+    "\n",
+    "(b) Foreign govt bonds substantially outperformed GMO's estimate.\n",
+    "\n",
+    "(c) US Treasury bills substantially underperformed GMO's estimate.\n",
+    "\n",
+    "### QUESTION 4 : Fund Performance (1997–2011)\n",
+    "(a) US fixed income is the asset class GMWAX was most heavily allocated, per Exhibit 3.\n",
+    "\n",
+    "(b) GMWAX performed comparably to its benchmark except roughly before & after the Tech Bubble, namely 1998 and 2000–2002, per Exhibit 2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2 Analyzing GMO\n",
     "### 2.1 Calculate the mean, volatility, and Sharpe ratio for GMWAX."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +257,7 @@
        "'1996', '2022'  0.0245  0.1123  0.2181"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +328,7 @@
        "GMWAX     -0.1492     -0.0483       -0.3552"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +419,7 @@
        "GMWAX: 2012-2022     -0.1187     -0.0397       -0.2168"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +493,7 @@
        "GMWAX -0.017  0.5456     0.5777"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +557,7 @@
        "GMWAX -0.0058  0.5396     0.5071"
       ]
      },
-     "execution_count": 366,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +623,7 @@
        "GMWAX -0.0345  0.5622     0.7645"
       ]
      },
-     "execution_count": 367,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +646,7 @@
     "\n",
     "#### (c) Does GMWAX provide alpha? Has that changed across the subsamples?\n",
     "\n",
-    "For each subsample, alpha < 0. GMWAC didn't provide alpha in either subsample. "
+    "* No. For each subsample, alpha < 0. GMWAC didn't provide alpha in either subsample. "
    ]
   },
   {
@@ -624,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +740,7 @@
        "1993-06-30  2.81  4.38   6.16  0.0037"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +798,7 @@
        "SPY -0.1129  0.0094     0.0094"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +856,7 @@
        "SPY -0.0712  0.0032     0.0086"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +918,7 @@
        "SPY -0.1792  0.008  0.0027 -0.001     0.0163"
       ]
      },
-     "execution_count": 371,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -954,6 +991,7 @@
        "      <th>Sharpe (Mean/Vol)</th>\n",
        "      <th>alpha</th>\n",
        "      <th>beta</th>\n",
+       "      <th>Info ratio</th>\n",
        "      <th>Max Drawdown</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -965,6 +1003,7 @@
        "      <td>0.7348</td>\n",
        "      <td>0.0207</td>\n",
        "      <td>0.8611</td>\n",
+       "      <td>0.2759</td>\n",
        "      <td>-0.6530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -974,6 +1013,7 @@
        "      <td>0.8383</td>\n",
        "      <td>0.0322</td>\n",
        "      <td>0.7327</td>\n",
+       "      <td>0.4789</td>\n",
        "      <td>-0.3823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -983,6 +1023,7 @@
        "      <td>0.8588</td>\n",
        "      <td>0.0451</td>\n",
        "      <td>0.7750</td>\n",
+       "      <td>0.5118</td>\n",
        "      <td>-0.5221</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -990,13 +1031,18 @@
        "</div>"
       ],
       "text/plain": [
-       "            Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Max Drawdown\n",
-       "DP        0.1095  0.1490             0.7348  0.0207  0.8611       -0.6530\n",
-       "EP        0.1078  0.1286             0.8383  0.0322  0.7327       -0.3823\n",
-       "3-Factor  0.1250  0.1456             0.8588  0.0451  0.7750       -0.5221"
+       "            Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Info ratio  \\\n",
+       "DP        0.1095  0.1490             0.7348  0.0207  0.8611      0.2759   \n",
+       "EP        0.1078  0.1286             0.8383  0.0322  0.7327      0.4789   \n",
+       "3-Factor  0.1250  0.1456             0.8588  0.0451  0.7750      0.5118   \n",
+       "\n",
+       "          Max Drawdown  \n",
+       "DP             -0.6530  \n",
+       "EP             -0.3823  \n",
+       "3-Factor       -0.5221  "
       ]
      },
-     "execution_count": 211,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1123,7 @@
        "GMWAX       -0.0473"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1164,7 +1210,7 @@
        "US3M      0.0231      0.0058        3.9866"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1346,7 @@
        "[356 rows x 3 columns]"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1315,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1412,7 @@
        "3-Factor             37.0787"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1517,7 @@
        "2022-10-31  0.0071 -0.0019  0.0011"
       ]
      },
-     "execution_count": 431,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1490,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1545,7 @@
        "0.6297038901908676"
       ]
      },
-     "execution_count": 432,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1513,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1579,6 +1625,7 @@
        "      <th>Sharpe (Mean/Vol)</th>\n",
        "      <th>alpha</th>\n",
        "      <th>beta</th>\n",
+       "      <th>Info ratio</th>\n",
        "      <th>Max Drawdown</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1590,6 +1637,7 @@
        "      <td>0.3723</td>\n",
        "      <td>0.0548</td>\n",
        "      <td>0.4935</td>\n",
+       "      <td>0.22</td>\n",
        "      <td>-0.8028</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1597,11 +1645,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                 Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Max Drawdown\n",
-       "oos_portfolio  0.0971  0.2608             0.3723  0.0548  0.4935       -0.8028"
+       "                 Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Info ratio  \\\n",
+       "oos_portfolio  0.0971  0.2608             0.3723  0.0548  0.4935        0.22   \n",
+       "\n",
+       "               Max Drawdown  \n",
+       "oos_portfolio       -0.8028  "
       ]
      },
-     "execution_count": 441,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1622,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1729,7 @@
        "3-Factor         -0.0642"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1757,7 +1808,7 @@
        "3-Factor       0.1063      0.1501        0.7079"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1779,7 +1830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1886,7 @@
        "oos_portfolio             37.7104"
       ]
      },
-     "execution_count": 457,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
