--- a/homework/hw7.ipynb
+++ b/homework/hw7.ipynb
@@ -1468,53 +1468,110 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>const</th>\n",
        "      <th>DP</th>\n",
        "      <th>EP</th>\n",
+       "      <th>US10Y</th>\n",
+       "      <th>SPY</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>1993-02-28</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-03-31</th>\n",
+       "      <td>2.82</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>0.0224</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-04-30</th>\n",
+       "      <td>2.77</td>\n",
+       "      <td>4.41</td>\n",
+       "      <td>6.03</td>\n",
+       "      <td>-0.0256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-05-31</th>\n",
+       "      <td>2.82</td>\n",
+       "      <td>4.44</td>\n",
+       "      <td>6.05</td>\n",
+       "      <td>0.0270</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1993-06-30</th>\n",
+       "      <td>2.81</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>6.16</td>\n",
+       "      <td>0.0037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2022-06-30</th>\n",
-       "      <td>0.0076</td>\n",
-       "      <td>-0.0027</td>\n",
-       "      <td>0.0014</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>4.79</td>\n",
+       "      <td>2.85</td>\n",
+       "      <td>-0.0825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-07-31</th>\n",
-       "      <td>0.0071</td>\n",
-       "      <td>-0.0022</td>\n",
-       "      <td>0.0013</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>5.23</td>\n",
+       "      <td>2.98</td>\n",
+       "      <td>0.0921</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-08-31</th>\n",
-       "      <td>0.0077</td>\n",
-       "      <td>-0.0026</td>\n",
-       "      <td>0.0013</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>4.91</td>\n",
+       "      <td>2.67</td>\n",
+       "      <td>-0.0408</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-09-30</th>\n",
-       "      <td>0.0073</td>\n",
-       "      <td>-0.0023</td>\n",
-       "      <td>0.0013</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>-0.0924</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2022-10-31</th>\n",
-       "      <td>0.0071</td>\n",
-       "      <td>-0.0019</td>\n",
-       "      <td>0.0011</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>5.52</td>\n",
+       "      <td>3.83</td>\n",
+       "      <td>0.0813</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>357 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "             const      DP      EP\n",
-       "2022-06-30  0.0076 -0.0027  0.0014\n",
-       "2022-07-31  0.0071 -0.0022  0.0013\n",
-       "2022-08-31  0.0077 -0.0026  0.0013\n",
-       "2022-09-30  0.0073 -0.0023  0.0013\n",
-       "2022-10-31  0.0071 -0.0019  0.0011"
+       "              DP    EP  US10Y     SPY\n",
+       "1993-02-28   NaN   NaN    NaN  0.0107\n",
+       "1993-03-31  2.82  4.44   6.03  0.0224\n",
+       "1993-04-30  2.77  4.41   6.03 -0.0256\n",
+       "1993-05-31  2.82  4.44   6.05  0.0270\n",
+       "1993-06-30  2.81  4.38   6.16  0.0037\n",
+       "...          ...   ...    ...     ...\n",
+       "2022-06-30  1.57  4.79   2.85 -0.0825\n",
+       "2022-07-31  1.64  5.23   2.98  0.0921\n",
+       "2022-08-31  1.65  4.91   2.67 -0.0408\n",
+       "2022-09-30  1.56  5.00   3.15 -0.0924\n",
+       "2022-10-31  1.70  5.52   3.83  0.0813\n",
+       "\n",
+       "[357 rows x 4 columns]"
       ]
      },
      "execution_count": 24,
@@ -1523,15 +1580,7 @@
     }
    ],
    "source": [
-    "# model = RollingOLS.from_formula(\"SPY ~ DP + EP\", data=factor, window=factor.shape[0], min_nobs=60, expanding=True).fit()\n",
-    "factor = pd.read_excel(\"../data/gmo_analysis_data.xlsx\",\n",
-    "                       sheet_name=1, index_col=0)\n",
-    "factor = factor.join(ret)\n",
-    "model = RollingOLS(\n",
-    "    factor[[\"SPY\"]], sm.add_constant(factor[[\"DP\", \"EP\"]]), window=factor.shape[0], min_nobs=60, expanding=True).fit()\n",
-    "\n",
-    "params = model.params.shift()\n",
-    "params.tail()"
+    "factor"
    ]
   },
   {
@@ -1541,11 +1590,100 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>const</th>\n",
+       "      <th>DP</th>\n",
+       "      <th>EP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-06-30</th>\n",
+       "      <td>-0.0167</td>\n",
+       "      <td>0.0073</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-31</th>\n",
+       "      <td>-0.0176</td>\n",
+       "      <td>0.0078</td>\n",
+       "      <td>0.0025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31</th>\n",
+       "      <td>-0.0172</td>\n",
+       "      <td>0.0074</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-30</th>\n",
+       "      <td>-0.0175</td>\n",
+       "      <td>0.0076</td>\n",
+       "      <td>0.0026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-31</th>\n",
+       "      <td>-0.0183</td>\n",
+       "      <td>0.0081</td>\n",
+       "      <td>0.0024</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0.6297038901908676"
+       "             const      DP      EP\n",
+       "2022-06-30 -0.0167  0.0073  0.0026\n",
+       "2022-07-31 -0.0176  0.0078  0.0025\n",
+       "2022-08-31 -0.0172  0.0074  0.0026\n",
+       "2022-09-30 -0.0175  0.0076  0.0026\n",
+       "2022-10-31 -0.0183  0.0081  0.0024"
       ]
      },
      "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model = RollingOLS.from_formula(\"SPY ~ DP + EP\", data=factor, window=factor.shape[0], min_nobs=60, expanding=True).fit()\n",
+    "model = RollingOLS(\n",
+    "    factor[[\"SPY\"]], sm.add_constant(factor[[\"DP\", \"EP\"]]), window=factor.shape[0], min_nobs=59, expanding=True).fit()\n",
+    "\n",
+    "params = model.params.shift()\n",
+    "params.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6212044297838806"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,25 +1697,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SPY    0.6101\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "zero_pre_spy = factor[[\"SPY\"]].expanding(60).mean().shift()\n",
     "zero_pre_err = np.square((factor[[\"SPY\"]] - zero_pre_spy))\n",
-    "zero_pre_err = zero_pre_err.sum()"
+    "zero_pre_err = zero_pre_err.sum()\n",
+    "zero_pre_err"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R-squared: -0.032209205517152784\n"
+      "R-squared: -0.01827690906689372\n"
      ]
     }
    ],
@@ -1591,12 +1742,12 @@
    "source": [
     "###  4.2 Re-do problem 3.2 using this OOS forecast. How much better/worse is the OOS strategy compared to the in-sample version of 3.2?\n",
     "\n",
-    "* Worse. "
+    "* Worse. It has lower mean return and higher maximum drawdown."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1632,13 +1783,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>oos_portfolio</th>\n",
-       "      <td>0.0971</td>\n",
-       "      <td>0.2608</td>\n",
-       "      <td>0.3723</td>\n",
-       "      <td>0.0548</td>\n",
-       "      <td>0.4935</td>\n",
-       "      <td>0.22</td>\n",
-       "      <td>-0.8028</td>\n",
+       "      <td>0.0974</td>\n",
+       "      <td>0.2299</td>\n",
+       "      <td>0.4237</td>\n",
+       "      <td>0.0574</td>\n",
+       "      <td>0.4667</td>\n",
+       "      <td>0.2633</td>\n",
+       "      <td>-0.7609</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1646,13 +1797,13 @@
       ],
       "text/plain": [
        "                 Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Info ratio  \\\n",
-       "oos_portfolio  0.0971  0.2608             0.3723  0.0548  0.4935        0.22   \n",
+       "oos_portfolio  0.0974  0.2299             0.4237  0.0574  0.4667      0.2633   \n",
        "\n",
        "               Max Drawdown  \n",
-       "oos_portfolio       -0.8028  "
+       "oos_portfolio       -0.7609  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1854,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>oos_portfolio</th>\n",
-       "      <td>-0.0830</td>\n",
+       "      <td>-0.0742</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DP</th>\n",
@@ -1723,13 +1874,13 @@
       ],
       "text/plain": [
        "               VaR(0.05)\n",
-       "oos_portfolio    -0.0830\n",
+       "oos_portfolio    -0.0742\n",
        "DP               -0.0523\n",
        "EP               -0.0541\n",
        "3-Factor         -0.0642"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1774,9 +1925,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>oos_portfolio</th>\n",
-       "      <td>0.0971</td>\n",
-       "      <td>0.2608</td>\n",
-       "      <td>0.3723</td>\n",
+       "      <td>0.0974</td>\n",
+       "      <td>0.2299</td>\n",
+       "      <td>0.4237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DP</th>\n",
@@ -1802,13 +1953,13 @@
       ],
       "text/plain": [
        "                 mean  volatility  Sharpe Ratio\n",
-       "oos_portfolio  0.0971      0.2608        0.3723\n",
+       "oos_portfolio  0.0974      0.2299        0.4237\n",
        "DP             0.0854      0.1519        0.5623\n",
        "EP             0.0848      0.1301        0.6514\n",
        "3-Factor       0.1063      0.1501        0.7079"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +2023,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>oos_portfolio</th>\n",
-       "      <td>37.7104</td>\n",
+       "      <td>38.7205</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1883,10 +2034,10 @@
        "DP                        37.3596\n",
        "EP                        37.3596\n",
        "3-Factor                  37.0787\n",
-       "oos_portfolio             37.7104"
+       "oos_portfolio             38.7205"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
