--- a/homework/hw7.ipynb
+++ b/homework/hw7.ipynb
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1658,7 @@
        "2022-10-31 -0.0183  0.0081  0.0024"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1683,7 @@
        "0.6212044297838806"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,61 @@
     }
    ],
    "source": [
-    "print(\"R-squared: \" + str(1 - predict_err/zero_pre_err[0]))"
+    "print(\"R-squared: \" + str(1 - predict_err/zero_pre_err[0]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DP factor model R-squared: -0.01827690906689372\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RollingOLS(\n",
+    "    factor[[\"SPY\"]], sm.add_constant(factor[[\"DP\"]]), window=factor.shape[0], min_nobs=59, expanding=True).fit()\n",
+    "\n",
+    "params = model.params.shift()\n",
+    "predict_spy1 = (params[[\"DP\"]] * factor[[\"DP\"]]\n",
+    "               ).sum(axis=1) + params[\"const\"]\n",
+    "predict_err = np.square(factor[\"SPY\"].subtract(predict_spy)).sum()\n",
+    "zero_pre_spy = factor[[\"SPY\"]].expanding(60).mean().shift()\n",
+    "zero_pre_err = np.square((factor[[\"SPY\"]] - zero_pre_spy))\n",
+    "zero_pre_err = zero_pre_err.sum()\n",
+    "print(\"DP factor model R-squared: \" + str(1 - predict_err/zero_pre_err[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EP factor model R-squared: -0.01827690906689372\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = RollingOLS(\n",
+    "    factor[[\"SPY\"]], sm.add_constant(factor[[\"EP\"]]), window=factor.shape[0], min_nobs=59, expanding=True).fit()\n",
+    "\n",
+    "params = model.params.shift()\n",
+    "predict_spy2 = (params[[\"EP\"]] * factor[[\"EP\"]]\n",
+    "               ).sum(axis=1) + params[\"const\"]\n",
+    "predict_err = np.square(factor[\"SPY\"].subtract(predict_spy)).sum()\n",
+    "zero_pre_spy = factor[[\"SPY\"]].expanding(60).mean().shift()\n",
+    "zero_pre_err = np.square((factor[[\"SPY\"]] - zero_pre_spy))\n",
+    "zero_pre_err = zero_pre_err.sum()\n",
+    "print(\"EP factor model R-squared: \" + str(1 - predict_err/zero_pre_err[0]))"
    ]
   },
   {
@@ -1747,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1836,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>oos_portfolio</th>\n",
+       "      <th>oos_portfolio: DP+EP</th>\n",
        "      <td>0.0974</td>\n",
        "      <td>0.2299</td>\n",
        "      <td>0.4237</td>\n",
@@ -1791,25 +1845,52 @@
        "      <td>0.2633</td>\n",
        "      <td>-0.7609</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: DP</th>\n",
+       "      <td>0.0798</td>\n",
+       "      <td>0.1763</td>\n",
+       "      <td>0.4525</td>\n",
+       "      <td>-0.0069</td>\n",
+       "      <td>1.0109</td>\n",
+       "      <td>-0.0880</td>\n",
+       "      <td>-0.5519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: EP</th>\n",
+       "      <td>0.0819</td>\n",
+       "      <td>0.1654</td>\n",
+       "      <td>0.4953</td>\n",
+       "      <td>0.0353</td>\n",
+       "      <td>0.5435</td>\n",
+       "      <td>0.2490</td>\n",
+       "      <td>-0.5837</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  Info ratio  \\\n",
-       "oos_portfolio  0.0974  0.2299             0.4237  0.0574  0.4667      0.2633   \n",
+       "                        Mean     Vol  Sharpe (Mean/Vol)   alpha    beta  \\\n",
+       "oos_portfolio: DP+EP  0.0974  0.2299             0.4237  0.0574  0.4667   \n",
+       "oos_portfolio: DP     0.0798  0.1763             0.4525 -0.0069  1.0109   \n",
+       "oos_portfolio: EP     0.0819  0.1654             0.4953  0.0353  0.5435   \n",
        "\n",
-       "               Max Drawdown  \n",
-       "oos_portfolio       -0.7609  "
+       "                      Info ratio  Max Drawdown  \n",
+       "oos_portfolio: DP+EP      0.2633       -0.7609  \n",
+       "oos_portfolio: DP        -0.0880       -0.5519  \n",
+       "oos_portfolio: EP         0.2490       -0.5837  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oos_port = (predict_spy * 100 * ret[\"SPY\"]).to_frame(\"oos_portfolio\")\n",
+    "oos_port1 = (predict_spy * 100 * ret[\"SPY\"]).to_frame(\"oos_portfolio: DP+EP\")\n",
+    "oos_port2 = (predict_spy1 * 100 * ret[\"SPY\"]).to_frame(\"oos_portfolio: DP\")\n",
+    "oos_port3 = (predict_spy2 * 100 * ret[\"SPY\"]).to_frame(\"oos_portfolio: EP\")\n",
+    "oos_port = pd.concat([oos_port1, oos_port2, oos_port3], axis=1)\n",
     "summary_stats_bm(oos_port.iloc[60:, ], ret.iloc[60:, 0])"
    ]
   },
@@ -1819,12 +1900,12 @@
    "source": [
     "### 4.3 Re-do problem 3.3 using this OOS forecast.\n",
     "\n",
-    "* OOS forecast has higher risk than insample forecast. "
+    "* OOS forecasts have higher risk than insample forecasts when we calculating 0.05 VaR and Sharpe ratio, also, they have higher underperformed rate than insample forecasts. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1853,8 +1934,16 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>oos_portfolio</th>\n",
+       "      <th>oos_portfolio: DP+EP</th>\n",
        "      <td>-0.0742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: DP</th>\n",
+       "      <td>-0.0726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: EP</th>\n",
+       "      <td>-0.0710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DP</th>\n",
@@ -1873,14 +1962,16 @@
        "</div>"
       ],
       "text/plain": [
-       "               VaR(0.05)\n",
-       "oos_portfolio    -0.0742\n",
-       "DP               -0.0523\n",
-       "EP               -0.0541\n",
-       "3-Factor         -0.0642"
+       "                      VaR(0.05)\n",
+       "oos_portfolio: DP+EP    -0.0742\n",
+       "oos_portfolio: DP       -0.0726\n",
+       "oos_portfolio: EP       -0.0710\n",
+       "DP                      -0.0523\n",
+       "EP                      -0.0541\n",
+       "3-Factor                -0.0642"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1893,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1924,10 +2015,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>oos_portfolio</th>\n",
+       "      <th>oos_portfolio: DP+EP</th>\n",
        "      <td>0.0974</td>\n",
        "      <td>0.2299</td>\n",
        "      <td>0.4237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: DP</th>\n",
+       "      <td>0.0798</td>\n",
+       "      <td>0.1763</td>\n",
+       "      <td>0.4525</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: EP</th>\n",
+       "      <td>0.0819</td>\n",
+       "      <td>0.1654</td>\n",
+       "      <td>0.4953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DP</th>\n",
@@ -1952,14 +2055,16 @@
        "</div>"
       ],
       "text/plain": [
-       "                 mean  volatility  Sharpe Ratio\n",
-       "oos_portfolio  0.0974      0.2299        0.4237\n",
-       "DP             0.0854      0.1519        0.5623\n",
-       "EP             0.0848      0.1301        0.6514\n",
-       "3-Factor       0.1063      0.1501        0.7079"
+       "                        mean  volatility  Sharpe Ratio\n",
+       "oos_portfolio: DP+EP  0.0974      0.2299        0.4237\n",
+       "oos_portfolio: DP     0.0798      0.1763        0.4525\n",
+       "oos_portfolio: EP     0.0819      0.1654        0.4953\n",
+       "DP                    0.0854      0.1519        0.5623\n",
+       "EP                    0.0848      0.1301        0.6514\n",
+       "3-Factor              0.1063      0.1501        0.7079"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1970,18 +2075,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "excess = oos_port.join(rf).dropna()\n",
-    "excess[\"oos_portfolio\"] = excess[\"oos_portfolio\"] - excess[\"US3M\"]\n",
-    "excess = excess"
+    "for col in excess.columns:\n",
+    "    excess[col] = excess[col] - excess[\"US3M\"]\n",
+    "excess = excess.iloc[1:, :3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2022,29 +2128,41 @@
        "      <td>37.0787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>oos_portfolio</th>\n",
-       "      <td>38.7205</td>\n",
+       "      <th>oos_portfolio: DP+EP</th>\n",
+       "      <td>38.8514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: DP</th>\n",
+       "      <td>39.1892</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>oos_portfolio: EP</th>\n",
+       "      <td>38.5135</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Underperformed (%)\n",
-       "DP                        37.3596\n",
-       "EP                        37.3596\n",
-       "3-Factor                  37.0787\n",
-       "oos_portfolio             38.7205"
+       "                      Underperformed (%)\n",
+       "DP                               37.3596\n",
+       "EP                               37.3596\n",
+       "3-Factor                         37.0787\n",
+       "oos_portfolio: DP+EP             38.8514\n",
+       "oos_portfolio: DP                39.1892\n",
+       "oos_portfolio: EP                38.5135"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "oos_rate = ((excess[[\"oos_portfolio\"]] < 0).sum() /\n",
-    "            excess.shape[0]).to_frame(\"Underperformed (%)\") * 100\n",
+    "excess[excess >= 0] = 0\n",
+    "excess[excess < 0] = 1\n",
+    "oos_rate = (excess.sum(\n",
+    "    axis=0)/excess.shape[0]*100).to_frame(\"Underperformed (%)\")\n",
     "underperform_rate.append(oos_rate)"
    ]
   },
