--- a/homework/hw8.ipynb
+++ b/homework/hw8.ipynb
@@ -29,12 +29,21 @@
     "# 1 Conceptual issues for LTCM\n",
     "## 1.1 Describe LTCM’s investment strategy with regard to the following aspects:\n",
     "\n",
-    "- Securities traded\n",
-    "- Trading frequency\n",
-    "- Skewness (Do they seek many small wins or a few big hits?) \n",
-    "- Forecasting (What is behind their selection of trades?)\n",
+    "- Securities traded: Fixed income and credit, and some equities, acoree global markets. \n",
     "\n",
-    "## 1.2 What are LTCM’s biggest advantages over its competitors?\n"
+    "- Trading frequency: Their strategies are designed to make money over long horizons -- six months to two years or more, however the trading frequency is related to specific trading strategies. Their largest bucket, the convergence trades, typically take weeks and months to converge. Overall, they are something of a medium-term frequency. Largely, they are not trying to arbitrage intraday movements, nor are they making long-term directional bets.\n",
+    "\n",
+    "- Skewness (Do they seek many small wins or a few big hits?): LTCM largely is trying to pick up small premia in the convergence trades, which limits the upside of any individual trade, and leaves it substantial downside, given all the leverage.\n",
+    "\n",
+    "- Forecasting (What is behind their selection of trades?):  Forecasting convergence.\n",
+    "\n",
+    "## 1.2 What are LTCM’s biggest advantages over its competitors?\n",
+    "\n",
+    "- Efficient financing. LTCM got very favorable terms on all financing—sometimes even zero haircut! Typically had small, if any, outlay.\n",
+    "- Fund size. Have market power even in the large market of institutional wholesale.\n",
+    "- Liquidity. LTCM has in place many mechanisms to ensure liquidity.\n",
+    "- Long-term horizon. In financing and assessing trades, LTCM takes a relatively long-term view.\n",
+    "- Hedged. LTCM avoids taking too much default risk or explicit directional bets.\n"
    ]
   },
   {
@@ -42,9 +51,13 @@
    "metadata": {},
    "source": [
     "## 1.3 The case discusses four types of funding risk facing LTCM:\n",
-    "- collateral haircuts \n",
-    "- repo maturity\n",
-    "- equity redemption \n",
+    "\n",
+    "- collateral haircuts: Collateral haircuts. For most trades, LTCM obtains 100% financing on a fully collateralized basis. They use value at risk measures and stress test for modelling potential profits and losses.\n",
+    "\n",
+    "- repo maturity: LTCM goes against the norm by entering into relatively long-maturity repo. While much of it is overnight, LTCM uses contracts that typically have maturity of 6-12 months. Furthermore, LTCM manages their aggregate repo maturity.\n",
+    "\n",
+    "- equity redemption: The firm is highly levered, so equity funding risk is especially important. LTCM restricts redemptions of equity year by year. The restriction is particularly strong in that unredeemed money is re-locked.\n",
+    "\n",
     "- loan access"
    ]
   },
