--- a/exam/functions.ipynb
+++ b/exam/functions.ipynb
@@ -57,7 +57,6 @@
     "\n",
     "# calculate tangency portfolio omega\n",
     "\n",
-    "\n",
     "def cal_tangency_w(df, annual_factor):\n",
     "    '''give assets return and annualize factor, return tangency weight'''\n",
     "    N = df.shape[1]\n",
@@ -81,7 +80,8 @@
     "\n",
     "\n",
     "def cal_delta(mu_p, df, annual_factor=12):\n",
-    "    '''give target mu_p, assets return and annualize factor, return delta and weight'''\n",
+    "    '''give target mu_p, assets return and annualize factor, return delta and weight. \n",
+    "    Remember that m_p is the monthly(not annualized return. '''\n",
     "    mu_p_ann = mu_p * annual_factor\n",
     "    mu = df.mean() * annual_factor\n",
     "    tangency_w = cal_tangency_w(df, annual_factor)\n",
@@ -95,6 +95,41 @@
     "    std = df.std()\n",
     "    risk_parity_w = 1/std/(1/std).sum()\n",
     "    return risk_parity_w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cal_excess_tangency(df_ex, annual_factor):\n",
+    "    N = df_ex.shape[1]\n",
+    "\n",
+    "    Sigma = df_ex.cov() * annual_factor\n",
+    "    Sigma_inv = np.linalg.inv(Sigma)\n",
+    "    mean_ex = df_ex.mean() * annual_factor\n",
+    "\n",
+    "    w_t = 1/(np.ones(N) @ Sigma_inv @ mean_ex) * Sigma_inv @ mean_ex\n",
+    "    return pd.Series(w_t, index=df_ex.columns)\n",
+    "\n",
+    "\n",
+    "def cal_excess_weight(mu_p_telda, df_ex, annual_factor):\n",
+    "    N = df_ex.shape[1]\n",
+    "\n",
+    "    mean_ex = df_ex.mean() * annual_factor\n",
+    "    Sigma = df_ex.cov() * annual_factor\n",
+    "    Sigma_inv = np.linalg.inv(Sigma)\n",
+    "\n",
+    "    w_t = 1/(np.ones(N) @ Sigma_inv @ mean_ex) * Sigma_inv @ mean_ex\n",
+    "    w_t = pd.Series(w_t, index=df_ex.columns)\n",
+    "\n",
+    "    delta_telda = (np.ones(N) @ Sigma_inv @ mean_ex.T)/(mean_ex @\n",
+    "                                                        Sigma_inv @ mean_ex.T) * mu_p_telda * annual_factor\n",
+    "\n",
+    "    w_star = delta_telda * w_t\n",
+    "    w_star = pd.Series(w_star, index=df_ex.columns)\n",
+    "    return w_star, w_t, delta_telda"
    ]
   },
   {
