--- a/exam/midterm2.ipynb
+++ b/exam/midterm2.ipynb
@@ -331,7 +331,7 @@
     "\n",
     "### 1\n",
     "\n",
-    "-\tFor the market factor, we can calculate it by the value-weighted method. In this way, we calculated value-neutral market factor\n",
+    "-\tTo reduce the correlation with the MKT factor, the value factor is constructed using a long-short construction which ensures market return neutrality and reduces the correlations.\n",
     "-\tFor size factor, we can also calculate value-weighed size. And the other way is first to divide stocks into different size groups and build value factor that are neutral to size. \n",
     "\n",
     "### 2\n",
